--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Singleton Law Firm Intake</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css?v=1"/>
+  <link rel="stylesheet" href="./styles.css?v=2"/>
 </head>
 
 <body>
@@ -83,100 +83,20 @@
         </div>
       </div>
 
-      <div class="chat-content">
+      <!-- Chat conversation area -->
+      <div class="chat-conversation" id="chatConversation">
+        <!-- Messages will be dynamically inserted here -->
+      </div>
 
-        <!-- STEP 1 -->
-        <div class="step active" id="step1">
-          <div class="message" id="step1Msg">
-            Hi 👋 Welcome to Singleton Law Firm. What kind of matter can we assist you with?
-          </div>
-          <div class="options">
-            <button id="optCar" class="option-btn" type="button" onclick="selectCaseType('Car Accident')"><span class="radio-circle"></span>Car Accident</button>
-            <button id="optMotorcycle" class="option-btn" type="button" onclick="selectCaseType('Motorcycle Accident')"><span class="radio-circle"></span>Motorcycle Accident</button>
-            <button id="optTruck" class="option-btn" type="button" onclick="selectCaseType('Truck Accident')"><span class="radio-circle"></span>Truck Accident</button>
-            <button id="optWrongful" class="option-btn" type="button" onclick="selectCaseType('Wrongful Death')"><span class="radio-circle"></span>Wrongful Death</button>
-            <button id="optBus" class="option-btn" type="button" onclick="selectCaseType('Bus Accident')"><span class="radio-circle"></span>Bus Accident</button>
-            <button id="optSlip" class="option-btn" type="button" onclick="selectCaseType('Slip & Fall')"><span class="radio-circle"></span>Slip & Fall</button>
-            <button id="optPersonalInjury" class="option-btn" type="button" onclick="selectCaseType('Personal Injury (All kinds)')"><span class="radio-circle"></span>Personal Injury (All kinds)</button>
-          </div>
-        </div>
-
-        <!-- STEP 2 -->
-        <div class="step" id="step2">
-          <div class="message message-with-back" id="step2Msg">
-            <button class="back-arrow-inline" type="button" aria-label="Go back" onclick="goBack(1)">‹</button>
-            Could you briefly explain the situation for me?
-          </div>
-
-          <div class="form-group">
-            <textarea class="form-input" id="description" placeholder="Describe what happened..."></textarea>
-          </div>
-
-          <button class="submit-btn" id="continue2" type="button" onclick="submitDescription()">Continue</button>
-        </div>
-
-        <!-- STEP 3 -->
-        <div class="step" id="step3">
-          <div class="message message-with-back" id="step3Msg">
-            <button class="back-arrow-inline" type="button" aria-label="Go back" onclick="goBack(2)">‹</button>
-            This will be quick—what's your full name?
-          </div>
-
-          <div class="form-group">
-            <input type="text" class="form-input" id="firstName" placeholder="First Name">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-input" id="lastName" placeholder="Last Name">
-          </div>
-
-          <button class="submit-btn" id="continue3" type="button" onclick="submitName()">Continue</button>
-        </div>
-
-        <!-- STEP 4 -->
-        <div class="step" id="step4">
-          <div class="message message-with-back" id="step4Msg">
-            <button class="back-arrow-inline" type="button" aria-label="Go back" onclick="goBack(3)">‹</button>
-            In case we get disconnected, can I have your phone number please?
-          </div>
-
-          <div class="form-group">
-            <input type="tel" class="form-input" id="phone" placeholder="(555) 555-5555">
-          </div>
-
-          <button class="submit-btn" id="continue4" type="button" onclick="submitPhone()">Continue</button>
-        </div>
-
-        <!-- STEP 5 -->
-        <div class="step" id="step5">
-          <div class="message message-with-back" id="step5Msg">
-            <button class="back-arrow-inline" type="button" aria-label="Go back" onclick="goBack(4)">‹</button>
-            And what's the best email to reach you at?
-          </div>
-
-          <div class="form-group">
-            <input type="email" class="form-input" id="email" placeholder="your@email.com">
-          </div>
-
-          <button class="submit-btn" id="finalSubmit" type="button" onclick="submitForm()">Submit</button>
-        </div>
-
-        <!-- STEP 6 -->
-        <div class="step" id="step6">
-          <div class="message">
-            <div class="success-message">
-              <div class="success-icon">✓</div>
-              <h3 class="success-title" id="successTitle">Thank You!</h3>
-              <p id="successBody">We've received your information. Someone from Singleton Law Firm will contact you shortly.</p>
-            </div>
-          </div>
-        </div>
-
+      <!-- Input area (changes based on current question) -->
+      <div class="chat-input-area" id="chatInputArea">
+        <!-- Will be populated by JS based on current step -->
       </div>
 
       <div class="footer">Powered by Rizo</div>
     </div>
   </div>
 
-  <script src="./script.js"></script>
+  <script src="./script.js?v=2"></script>
 </body>
 </html>
